--- a/client/package.json
+++ b/client/package.json
@@ -13,8 +13,11 @@
     "@mantine/core": "^7.3.0",
     "@mantine/form": "^7.3.0",
     "@mantine/hooks": "^7.3.0",
+    "mantine-form-zod-resolver": "^1.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "recharts": "^2.10.3",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
