--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@mantine/core": "^7.3.0",
     "@mantine/form": "^7.3.0",
     "@mantine/hooks": "^7.3.0",
+    "http-proxy-middleware": "^2.0.6",
     "mantine-form-zod-resolver": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
