Redirect to home route

--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,8 @@
     "mantine-form-zod-resolver": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router": "^6.21.1",
+    "react-router-dom": "^6.21.1",
     "recharts": "^2.10.3",
     "zod": "^3.22.4"
   },
