--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -16,6 +16,7 @@ Jinja2==3.1.2
 joblib==1.3.2
 matplotlib==3.7.3
 MarkupSafe==2.1.3
+nbconvert==7.13.1
 numpy==1.24.3
 orjson==3.9.10
 pandas==2.0.3
