--- a/client/package.json
+++ b/client/package.json
@@ -13,14 +13,12 @@
     "@mantine/core": "^7.3.0",
     "@mantine/form": "^7.3.0",
     "@mantine/hooks": "^7.3.0",
-    "http-proxy-middleware": "^2.0.6",
-    "mantine-form-zod-resolver": "^1.0.0",
+    "mantine-form-yup-resolver": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.21.1",
     "react-router-dom": "^6.21.1",
-    "recharts": "^2.10.3",
-    "zod": "^3.22.4"
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
